tests/negative/gold/indent3-test.gold
tests/negative/indent3-test.toit:9:5: error: All expressions in a sequence must be indented the same way
    "bad indent"
    ^~~~~~~~~~~~
Compilation failed.
